--- a/node-web-server/package.json
+++ b/node-web-server/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "weather-app",
+  "name": "y",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Daniel Zhou",
+  "author": "daniel zhou",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
-    "request": "^2.85.0",
-    "yargs": "^11.0.0"
+    "express": "^4.16.3",
+    "hbs": "^4.0.1"
   }
 }
